deploy: 64ee517c43a63385b84db1724525775fcd3b04e3

--- a/404.html
+++ b/404.html
@@ -14,21 +14,21 @@
 <meta property="og:locale" content="en">
 <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.">
 <meta property="og:description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.">
-<link rel="canonical" href="/trootech-knowledgebase/404.html">
-<meta property="og:url" content="/trootech-knowledgebase/404.html">
+<link rel="canonical" href="/articles/404.html">
+<meta property="og:url" content="/articles/404.html">
 <meta property="og:site_name" content="Trootech Knowledgebase">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta property="twitter:title" content="Trootech Knowledgebase">
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Samir Wadiwala"},"description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Trootech Knowledgebase","url":"/trootech-knowledgebase/404.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Samir Wadiwala"},"description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Trootech Knowledgebase","url":"/articles/404.html"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="icon" href="">
   <link rel="canonical" href="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/typeface-noto-sans@0.0.72/index.min.css">
-  <link rel="stylesheet" href="/trootech-knowledgebase/assets/css/main.css">
-  <script src="/trootech-knowledgebase/assets/js/main.js"></script><link type="application/atom+xml" rel="alternate" href="/trootech-knowledgebase/feed.xml" title="Trootech Knowledgebase">
+  <link rel="stylesheet" href="/articles/assets/css/main.css">
+  <script src="/articles/assets/js/main.js"></script><link type="application/atom+xml" rel="alternate" href="/articles/feed.xml" title="Trootech Knowledgebase">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js"></script>
 <!-- and it's easy to individually load additional languages -->
@@ -330,7 +330,7 @@ document.addEventListener('DOMContentLoaded', function(event) {
         [&quot;index.html&quot;, &quot;categories.html&quot;]
       </pre> -->
 
-      <span class="site-brand"><a class="site-brand-inner" rel="author" href="/trootech-knowledgebase/">
+      <span class="site-brand"><a class="site-brand-inner" rel="author" href="/articles/">
   <img class="site-favicon" title="Trootech Knowledgebase" src="" onerror="this.style.display='none'">
   Trootech Knowledgebase
 </a>
@@ -349,7 +349,7 @@ document.addEventListener('DOMContentLoaded', function(event) {
           <a class="page-link" href="/">HOME</a>
           <a class="page-link" href="/categories.html">CATEGORIES</a>
 
-          <!--<a class="page-link" href="/trootech-knowledgebase/">HOME</a><a class="page-link" href="/trootech-knowledgebase/categories.html">CATEGORIES</a>-->
+          <!--<a class="page-link" href="/articles/">HOME</a><a class="page-link" href="/articles/categories.html">CATEGORIES</a>-->
 
           <!--
 
@@ -881,7 +881,7 @@ function googleTranslateElementInit() {
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/trootech-knowledgebase/"></data>
+  <data class="u-url" href="/articles/"></data>
 
   <div class="wrapper">
     <div class="site-footer-inner">
@@ -889,7 +889,7 @@ function googleTranslateElementInit() {
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
-      <div class="footer-col rss-subscribe">Subscribe <a href="/trootech-knowledgebase/feed.xml">via RSS</a>
+      <div class="footer-col rss-subscribe">Subscribe <a href="/articles/feed.xml">via RSS</a>
 </div>
     </div>
   </div>
