deploy: b7b4224632238abcd362b9e30d371a547a9ad89a

--- a/404.html
+++ b/404.html
@@ -196,6 +196,15 @@ document.addEventListener('DOMContentLoaded', function(event) {
 
   window.addEventListener("load", initPhotoSwipe);
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    document.querySelectorAll("a").forEach(function (link) {
+      if (!link.hasAttribute("rel")) {
+        link.setAttribute("rel", "dofollow");
+      }
+    });
+  });
+</script>
 </head>
 <body>
 
